<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ci_duration">Duration</string>

    <string name="ci_time_format" translatable="false">%1s:%2s</string>
    <string name="ci_add_email_to_contact">Add Email to\nContact</string>
    <string name="ci_send_number_to_email">Send number to\nemail</string>
    <string name="ci_write_personal_message">Write Personal message</string>
    <string name="ci_create_a_new_reminder">Create New Reminder</string>
    <string name="ci_cancel">Cancel</string>
    <string name="ci_save">Save</string>
    <string name="ci_message">Messages</string>
    <string name="ci_send_mail">Send Mail</string>
    <string name="ci_calendar">Calendar</string>
    <string name="ci_web">Web</string>
    <string name="ci_good_morning">Good Morning!</string>
    <string name="ci_today_the_sun_rises_at_6_04_am_and_sets_at_6_25_pm">Today, the sun rises at 6:04 Am and sets at 6:25 PM</string>
    <string name="ci_after_call_setting">After call Setting</string>


    <string name="ci_good_afternoon">Good Afternoon!</string>
    <string name="ci_good_evening">Good Evening!</string>
    <string name="ci_good_night">Good Night!</string>
    <string name="ci_reminder_title">Reminder Title</string>
    <string name="ci_reminder_message">Reminder Message(optional)</string>
    <string name="ci_i_m_on_my_way">I\'m on my way</string>
    <string name="ci_sorry_i_can_t_talk_right_now">Sorry, I can\'t talk right now</string>
    <string name="ci_can_i_call_you_later">Can I call you later?</string>

    <string name="ci_ad_content_description" translatable="false">none</string>
    <string name="ci_ad_attribution_text" translatable="false">Ad</string>

    <string name="ci_space_for_ads">Space For Ads</string>
    <string name="ci_select_date">Select Date</string>
    <string name="ci_select_time">Select Time</string>


    <string name="ci_caller_toggle_agree_message_1">Dismissing this feature means you won’t see caller info or spam alerts. It helps identify unknown callers and manage their details easily.</string>
    <string name="ci_proceed">Proceed</string>
    <string name="ci_keep_it">Keep it</string>
    <string name="ci_caller_toggle_agree_title_1">Are you certain to disable this?</string>
    <string name="ci_caller_toggle_agree_title_2">You won’t be able to see any %s information.</string>
    <string name="ci_private_number">Private Number</string>

    <string name="ci_settings">Settings</string>
    <string name="ci_appearance">Appearance</string>
    <string name="ci_system_mode">System mode</string>
    <string name="ci_system_mode_des">Automatically follow the system theme (dark/light) on the call information screen.</string>
    <string name="ci_force_dark">Force Dark</string>
    <string name="ci_force_dark_des">Manually switch between dark and light modes on the call information screen.</string>
    <string name="ci_call_settings">Call Settings</string>
    <string name="ci_missed_call">Missed Call</string>
    <string name="ci_missed_call_des">Call information after a missed call with multiple options to handle contact information.</string>
    <string name="ci_complete_call">Complete Call</string>
    <string name="ci_complete_call_des">Call information after a call is completed with multiple options to handle contact information.</string>
    <string name="ci_no_answer">No Answer</string>
    <string name="ci_no_answer_des">Call information after unanswered call with multiple options to handle contact information.</string>
    <string name="ci_invalid_past_date">Selected date must be in future</string>
    <string name="ci_invalid_past_time">Selected time must be in future</string>
    <string name="ci_popup_settings">Popup Setting</string>
    <string name="ci_standard_view_des">By Allowing this you can access standard popup on cancel of classic popup.</string>
    <string name="ci_classic_popup">Classic Popup</string>
    <string name="ci_standard_popup">Standard Popup</string>
    <string name="ci_choose_popup">Choose Popup</string>
    <string name="ci_apply">Apply</string>
</resources>