<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/callThemeSurfaceContainerLowest"
    tools:context=".ui.activity.CallerSettingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clToolbar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:foreground="@drawable/bg_ripple_round"
            android:padding="4dp"
            android:src="@drawable/ci_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/callThemeOnSurface" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/sinteca_medium"
            android:includeFontPadding="false"
            android:letterSpacing="0.038"
            android:text="@string/ci_settings"
            android:textAlignment="textStart"
            android:textColor="?attr/callThemeOnSurface"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivBack"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clToolbar">

            <TextView
                android:id="@+id/tvAppearance"
                style="@style/SettingItemTitleTextStyle"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                android:text="@string/ci_appearance"
                android:textColor="?attr/callThemePrimary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clSystemMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAppearance">

                <TextView
                    android:id="@+id/tvSysMode1"
                    style="@style/SettingItemTitleTextStyle"
                    android:text="@string/ci_system_mode"
                    app:layout_constraintEnd_toStartOf="@+id/sSystemMode"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    style="@style/SettingItemDesTextStyle"
                    android:text="@string/ci_system_mode_des"
                    app:layout_constraintEnd_toStartOf="@+id/sSystemMode"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSysMode1" />


                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/sSystemMode"
                    style="@style/SettingItemSwitchStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSysMode1"
                    app:rippleColor="@android:color/transparent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clForceDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clSystemMode">

                <TextView
                    android:id="@+id/tvfDark1"
                    style="@style/SettingItemTitleTextStyle"
                    android:text="@string/ci_force_dark"
                    app:layout_constraintEnd_toStartOf="@+id/sForceDark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/SettingItemDesTextStyle"
                    android:text="@string/ci_force_dark_des"
                    app:layout_constraintEnd_toStartOf="@+id/sForceDark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvfDark1" />


                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/sForceDark"
                    style="@style/SettingItemSwitchStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvfDark1"
                    app:rippleColor="@android:color/transparent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvCallSettings"
                style="@style/SettingItemTitleTextStyle"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                android:text="@string/ci_call_settings"
                android:textColor="?attr/callThemePrimary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clForceDark" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clMissCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCallSettings">

                <TextView
                    android:id="@+id/tvMissCall"
                    style="@style/SettingItemTitleTextStyle"
                    android:text="@string/ci_missed_call"

                    app:layout_constraintEnd_toStartOf="@+id/switchMissCall"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/SettingItemDesTextStyle"
                    android:text="@string/ci_missed_call_des"
                    app:layout_constraintEnd_toStartOf="@+id/switchMissCall"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvMissCall" />


                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchMissCall"
                    style="@style/SettingItemSwitchStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvMissCall"
                    app:rippleColor="@android:color/transparent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clCompleteCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clMissCall">

                <TextView
                    android:id="@+id/tvCompleteCallTitle"
                    style="@style/SettingItemTitleTextStyle"
                    android:text="@string/ci_complete_call"
                    app:layout_constraintEnd_toStartOf="@+id/switchCompleteCall"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/SettingItemDesTextStyle"
                    android:text="@string/ci_complete_call_des"
                    app:layout_constraintEnd_toStartOf="@+id/switchCompleteCall"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCompleteCallTitle" />


                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchCompleteCall"
                    style="@style/SettingItemSwitchStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCompleteCallTitle"
                    app:rippleColor="@android:color/transparent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clNoAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clCompleteCall">

                <TextView
                    android:id="@+id/tvNoAnsTitle"
                    style="@style/SettingItemTitleTextStyle"
                    android:text="@string/ci_no_answer"
                    app:layout_constraintEnd_toStartOf="@+id/switchNoAnswer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/SettingItemDesTextStyle"
                    android:text="@string/ci_no_answer_des"
                    app:layout_constraintEnd_toStartOf="@+id/switchNoAnswer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvNoAnsTitle" />


                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchNoAnswer"
                    style="@style/SettingItemSwitchStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvNoAnsTitle"
                    app:rippleColor="@android:color/transparent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvGeneral"
                style="@style/SettingItemTitleTextStyle"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                android:text="General"
                android:textColor="?attr/callThemePrimary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clNoAnswer" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clPopupSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGeneral">

                <TextView
                    android:id="@+id/tvPopupTitle"
                    style="@style/SettingItemTitleTextStyle"
                    android:text="@string/ci_popup_settings"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvPopupDescription"
                    style="@style/SettingItemDesTextStyle"
                    tools:text="Standard"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPopupTitle" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clStandardViewOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clPopupSetting">

                <TextView
                    android:id="@+id/tvShowStandardView"
                    style="@style/SettingItemTitleTextStyle"
                    android:text="@string/ci_standard_popup"
                    app:layout_constraintEnd_toStartOf="@+id/sStandardView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/SettingItemDesTextStyle"
                    android:text="@string/ci_standard_view_des"
                    app:layout_constraintEnd_toStartOf="@+id/sStandardView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvShowStandardView" />


                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/sStandardView"
                    style="@style/SettingItemSwitchStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvShowStandardView"
                    app:rippleColor="@android:color/transparent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clStandardViewOption">

                <TextView
                    android:id="@+id/tvHelpTitle"
                    style="@style/SettingItemTitleTextStyle"
                    android:text="Need Help?"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/SettingItemDesTextStyle"
                    android:text="Feature not working? App crashing or buggy? Have suggestions or other issues? Let us know, and we'll assist you quickly."
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvHelpTitle" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>