<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.MoreFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp"
            android:paddingBottom="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clAddCallerToYourContacts"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ci_surface_container_low_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivAddContact"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ci_add_contact"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="?attr/callThemeOnSurface" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/sinteca_medium"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:text="Add Contact"
                    android:textColor="?attr/callThemeOnSurface"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivAddContact"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clMessage"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ci_surface_container_low_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clAddCallerToYourContacts">

                <ImageView
                    android:id="@+id/ivMessage"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ci_messages"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="?attr/callThemeOnSurface" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/sinteca_medium"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:text="@string/ci_message"
                    android:textColor="?attr/callThemeOnSurface"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivMessage"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clSendMail"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ci_surface_container_low_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clMessage">

                <ImageView
                    android:id="@+id/ivMail"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ci_send_primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="?attr/callThemeOnSurface" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:text="@string/ci_send_mail"
                    android:fontFamily="@font/sinteca_medium"
                    android:textColor="?attr/callThemeOnSurface"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivMail"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clCalender"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ci_surface_container_low_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clSendMail">

                <ImageView
                    android:id="@+id/ivCalender"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ci_calendar_"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="?attr/callThemeOnSurface" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:text="@string/ci_calendar"
                    android:fontFamily="@font/sinteca_medium"
                    android:textColor="?attr/callThemeOnSurface"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivCalender"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clWeb"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ci_surface_container_low_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clCalender">

                <ImageView
                    android:id="@+id/ivWeb"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ci_web"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="?attr/callThemeOnSurface" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:text="@string/ci_web"
                    android:textColor="?attr/callThemeOnSurface"
                    android:textSize="14sp"
                    android:fontFamily="@font/sinteca_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivWeb"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clAppSetting"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ci_surface_container_low_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clWeb">

                <ImageView
                    android:id="@+id/ivSetting"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@null"
                    android:padding="1.2dp"
                    android:src="@drawable/ci_setting"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="?attr/callThemeOnSurface" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:fontFamily="@font/sinteca_medium"
                    android:text="@string/ci_after_call_setting"
                    android:textColor="?attr/callThemeOnSurface"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivSetting"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>